--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
 		<link href="style.css" rel="stylesheet"type="text/css">
 		<script type="text/javascript" src ="script.js""></script>
 		
-	<head>
+	</head>
 <body>
 	<center 
 		<h2>Мобильное приложение для родителей по сопровождению детей-аутистов</h2>
